# mcp-chatbot

./: .env.example  README.md  pyproject.toml  requirements.txt
data/papers/test/: papers_info.json
src/mcp_chatbot/: __init__.py  chatbot.py  main.py  research_mcp_server.py  server_config.json  tools.py
src/mcp_chatbot/adapter/: __init__.py  tool_schema_converter.py
src/mcp_server_research/: Dockerfile  README.md  pyproject.toml  server.py
src/mcp_server_research/src/mcp_server_research/: server.py
tests/: test_tool_schema_converter.py  test_tools.py
