[project]
name = "mcp-server-research"
version = "0.1.0"
description = "MCP server for arXiv research paper search and retrieval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "arxiv>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-server-research = "mcp_server_research.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_research"]